--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^11.2.0",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.0",
@@ -38,6 +39,7 @@
     "otp-generator": "^4.0.1",
     "redis": "^4.6.15",
     "request-ip": "^3.3.0",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.1",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
@@ -51,6 +53,7 @@
     "@types/express": "^4.17.21",
     "@types/express-useragent": "^1.0.5",
     "@types/fs-extra": "^11.0.4",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.6",
     "@types/mongoose": "^5.11.97",
@@ -60,6 +63,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
     "@types/request-ip": "^0.0.41",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "eslint": "^8.57.0",
