--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "engines": {
     "npm": ">=8.19.2",
-    "node": ">=18.18.2"
+    "node": ">=18.18.2",
+    "pnpm": ">=9.13.2"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
