--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json,md}\"",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "dev:debug": "ts-node-dev --inspect -r tsconfig-paths/register --respawn src/server.ts",
+    "test:watch": "jest --watch",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up",
+    "db:seed": "ts-node-dev -r tsconfig-paths/register src/seeders/index.ts",
+    "validate": "pnpm lint && pnpm type-check && pnpm test",
+    "clean": "rimraf dist coverage"
   },
   "lint-staged": {
     "*.{ts,json,md}": "prettier --write",
@@ -57,6 +63,7 @@
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "os": "0.1.2",
     "otp-generator": "^4.0.1",
     "redis": "^4.7.0",
     "request-ip": "^3.3.0",
@@ -77,6 +84,7 @@
     "@types/express": "^4.17.21",
     "@types/express-useragent": "^1.0.5",
     "@types/fs-extra": "^11.0.4",
+    "@types/hpp": "0.2.6",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
